[package]
name = "robrix-crew-channel"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Crew channel abstraction for Robrix runtimes."
repository = "ssh://git@github.com/Project-Robius-China/robrix-crew-channel.git"

[dependencies]
async-stream = "0.3"
async-trait = "0.1"
futures-core = "0.3"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
url = { version = "2.5", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
